[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/levels/Level.gd" type="Script" id=1]
[ext_resource path="res://scenes/interface/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/entities/ConcreteEntities/Ships/PlayerShip.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/interface/GameLoseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/interface/GameWinMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/interface/EscapeMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/interface/SaveMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/interface/LoadMenu.tscn" type="PackedScene" id=8]

[sub_resource type="ImageTexture" id=1]

[sub_resource type="PanoramaSky" id=2]
panorama = SubResource( 1 )

[sub_resource type="Environment" id=3]
background_sky = SubResource( 2 )
background_sky_orientation = Basis( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008 )
background_sky_rotation = Vector3( 0, 1.5708, 0 )
background_sky_rotation_degrees = Vector3( 0, 90, 0 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 1920, 1080, 1 )
flag_disable_z = true
spread = 111.61
gravity = Vector3( 0, 0, 0 )
angular_velocity = 4.31248e-008
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Level" type="WorldEnvironment"]
pause_mode = 1
environment = SubResource( 3 )
script = ExtResource( 1 )

[node name="PlayerCamera" parent="." instance=ExtResource( 2 )]
editor/display_folded = true
AutoZoomEnabled = true

[node name="Particles2D" type="Particles2D" parent="PlayerCamera"]
z_index = 10
amount = 50
visibility_rect = Rect2( -1920, -1080, 1920, 1080 )
local_coords = false
process_material = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="BulletContainer" type="Node2D" parent="."]

[node name="ShipContainer" type="Node2D" parent="."]
editor/display_folded = true

[node name="Player" parent="ShipContainer" instance=ExtResource( 3 )]
editor/display_folded = true

[node name="CameraAnchor" type="RemoteTransform2D" parent="ShipContainer/Player"]
remote_path = NodePath("../../../PlayerCamera")
update_rotation = false
update_scale = false
__meta__ = {
"_edit_lock_": true
}

[node name="AsteroidContainer" type="Node2D" parent="."]

[node name="ItemContainer" type="Node2D" parent="."]

[node name="DynamicScenery" type="Node2D" parent="."]

[node name="Scenery" type="Node2D" parent="."]

[node name="MenuCanvas" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="MenuCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 250.0
margin_top = 250.0
margin_right = -250.0
margin_bottom = -250.0
mouse_filter = 2

[node name="GameLoseMenu" parent="MenuCanvas/MarginContainer" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1420.0
margin_bottom = 580.0

[node name="GameWinMenu" parent="MenuCanvas/MarginContainer" instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1420.0
margin_bottom = 580.0

[node name="EscapeMenu" parent="MenuCanvas" instance=ExtResource( 6 )]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="MenuCanvas/EscapeMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 250.0
margin_top = 250.0
margin_right = -250.0
margin_bottom = -250.0
mouse_filter = 2

[node name="SaveMenu" parent="MenuCanvas/EscapeMenu/MarginContainer" instance=ExtResource( 7 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1420.0
margin_bottom = 580.0

[node name="LoadMenu" parent="MenuCanvas/EscapeMenu/MarginContainer" instance=ExtResource( 8 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1420.0
margin_bottom = 580.0

[node name="Background" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="TriggerContainer" type="Node2D" parent="."]

[node name="LevelEndTrigger" type="Area2D" parent="TriggerContainer"]
[connection signal="load_game" from="MenuCanvas/EscapeMenu" to="." method="_on_EscapeMenu_load_game"]
[connection signal="save_game" from="MenuCanvas/EscapeMenu" to="." method="_on_EscapeMenu_save_game"]
[connection signal="body_shape_entered" from="TriggerContainer/LevelEndTrigger" to="." method="_on_LevelEndTrigger_body_shape_entered"]
